fixed: for styles and code readablity

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 .App{
-  background-color: rgb(238, 238, 238);
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   display: flex;
   flex-direction: column;
