--- a/src/Components/ControlButtons/ControlButtons.css
+++ b/src/Components/ControlButtons/ControlButtons.css
@@ -15,7 +15,7 @@
   
 .btn {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  width: 10vw;
+  min-width: 10vw;
   height: 5vh;
   border-radius: 14px;
   margin: 0px 6px;
