--- a/src/Components/StopWatch/StopWatch.css
+++ b/src/Components/StopWatch/StopWatch.css
@@ -1,9 +1,9 @@
 .stop-watch{
-  height: 85vh;
-  width: 23vw;
+  height: 100%;
+  width: 100%;
   background-color: #0d0c1b;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
 }
