--- a/src/Components/Timer/Timer.css
+++ b/src/Components/Timer/Timer.css
@@ -1,6 +1,4 @@
 .timer{
-  margin : 3rem 0;
-  width: 100%;
   display: flex;
   height: 12%;
   justify-content: center;
@@ -9,10 +7,11 @@
 
 .digits{
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 3rem;
-  color:  #f5f5f5;
+  font-size: 6rem;
+  color:  #b1b0b0;
 }
 
 .mili-sec{
+  font-size: 3rem;
   color:  #e42a2a;
 }
